@@ -14,7 +14,8 @@ frostwire (4.21.4) stable; urgency=low
   * Fixes bug when copying .apk files from Android device to desktop computer.
   * Fixes bug when saving torrents to it's default Save location if that
     folder has been deleted.
-  * Updated Mojito DHT integration.
+  * Fixes bug on which removed Torrent downloads would reappear.
+  * Updated Mojito DHT integration. Mojito DHT is now active.
   * Upgraded anti-spam mechanisms.
 	
  -- FrostWire Team <contact@frostwire.com>  Fri, 21 Jan 2011 20:00:00 -0500
